Closes #1